--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,32 @@
-HELP.md
+# === Java / Maven ===
 target/
+*.class
+*.jar
+*.war
+*.ear
+
+# === Maven Wrapper ===
 .mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+# === IntelliJ IDEA ===
+.idea/
 *.iml
 *.ipr
+*.iws
+out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# === Logs ===
+*.log
 
-### VS Code ###
-.vscode/
+# === OS-specific ===
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# macOS
+.DS_Store
+
+# === Other ===
+# Backup files
+*~
