--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-60</artifactId>
+			<version>3.7.0</version>
+		</dependency>
+
 
 		<!-- JWT dependencies -->
 		<dependency>
@@ -89,6 +95,14 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- For coordinates -->
+		<dependency>
+			<groupId>org.locationtech.jts</groupId>
+			<artifactId>jts-core</artifactId>
+			<version>1.19.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
