--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
 			<version>1.19.0</version>
 		</dependency>
 
+        <!-- For cloudinary -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.30.0</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
